--- a/source/css/_partial/header.styl
+++ b/source/css/_partial/header.styl
@@ -26,9 +26,13 @@
   
 
 #header-inner
-  position: relative
+  z-index: 100
   overflow: hidden
   width: 100%
+  position: absolute
+  top: 0;
+  left: 0
+  right: 0
   
 #banner
   position: absolute
@@ -44,7 +48,7 @@
   text-align: left
   height: logo-size
   position: absolute
-  top: 105px
+  top: 95px
   left: 0
   margin-top: logo-size * -0.5
 
@@ -67,7 +71,7 @@ $logo-text
   text-decoration: none
   color: #fff
   font-weight: 300
-  text-shadow: 0 1px 4px rgba(0, 0, 0, 0.3)
+  text-shadow: 0 1px 4px rgba(0, 0, 0, 0.6)
 
 #logo
   @extend $logo-text
@@ -87,13 +91,16 @@ $logo-text
 #main-nav
   float: left
   margin-left: 0
+  position: absolute
+  top: 0
+  right: 0
 
 $nav-link
   float: left
-  color: #fff
-  opacity: 0.6
+  color: #000
+  opacity: 0.8
   text-decoration: none
-  text-shadow: 0 1px rgba(0, 0, 0, 0.2)
+  
   transition: opacity 0.2s
   display: block
   padding: 20px 15px
@@ -116,7 +123,7 @@ $nav-link
   @extend $nav-link
   font-weight: 300
   letter-spacing: 1
-  background: rgba(255,255,255,0.3)
+  background: rgba(255,255,255,0.6)
   padding: 20px 15px
   @media mq-mobile
     display: none
@@ -131,6 +138,7 @@ $nav-link
 #sub-nav
   float: right
   margin-right: -15px
+  margin-top: 45px  
 
 #nav-rss-link
   &:before
@@ -142,7 +150,7 @@ $nav-link
 
 #search-form-wrap
   position: absolute
-  top: 15px
+  top: 60px
   width: 150px
   height: 30px
   right: -150px
