--- a/source/css/_partial/header.styl
+++ b/source/css/_partial/header.styl
@@ -71,7 +71,7 @@ $logo-text
   text-decoration: none
   color: #fff
   font-weight: 300
-  text-shadow: 0 1px 4px rgba(0, 0, 0, 0.6)
+  text-shadow: 0 2px 9px rgba(0,0,0,0.8)
 
 #logo
   @extend $logo-text
