--- a/source/css/_partial/mobile.styl
+++ b/source/css/_partial/mobile.styl
@@ -17,7 +17,11 @@
     font-weight: bold
     &:hover
       color: #fff
-		
+
+@media mq-normal
+  .header-title-graphic
+    display: none        
+            
 @media mq-tablet
   .header-title-graphic
     display: none
