--- a/source/css/_partial/archive.styl
+++ b/source/css/_partial/archive.styl
@@ -16,7 +16,9 @@
     column-count: 2
   @media mq-normal
     column-count: 3
-
+  @media mq-large
+    column-count: 3
+            
 .archive-article
   avoid-column-break()
 
