--- a/source/css/_partial/mobile.styl
+++ b/source/css/_partial/mobile.styl
@@ -18,10 +18,14 @@
     &:hover
       color: #fff
 
-@media mq-normal
+@media mq-normal        
   .header-title-graphic
-    display: none        
-            
+    display: block
+          
+@media mq-large
+  .header-title-graphic
+    display: block
+        
 @media mq-tablet
   .header-title-graphic
     display: none
@@ -29,6 +33,8 @@
 @media mq-mobile
   .header-title-graphic
     display: none
+                    
+                    
 
 
 
