--- a/source/css/_partial/sidebar-bottom.styl
+++ b/source/css/_partial/sidebar-bottom.styl
@@ -2,6 +2,8 @@
   margin-bottom: block-margin !important
   @media mq-normal
     column(sidebar-column)
+  @media mq-large
+    column(sidebar-column)    
 
 .widget-title
   color: #ccc
