--- a/source/css/_variables.styl
+++ b/source/css/_variables.styl
@@ -33,7 +33,8 @@ line-height-title = 1.1em
 // Header
 logo-size = 90px
 subtitle-size = 34px
-subtitle-size-tablet = subtitle-size * 0.7
+subtitle-size-normal = subtitle-size * 0.6
+subtitle-size-tablet = subtitle-size * 0.6
 subtitle-size-mobile = subtitle-size
 banner-height = 325px
 banner-url = "images/banner.jpg"
@@ -66,6 +67,6 @@ columns = main-column + _sidebar-column
 // Media queries
 mq-mobile = "screen and (max-width: 479px)"
 mq-tablet = "screen and (min-width: 480px) and (max-width: 767px)"
-mq-normal = "screen and (min-width: 768px) and (max-width: 959px)"
-mq-large = "screen and (min-width: 960px)"
+mq-normal = "screen and (min-width: 768px)"
+mq-large = "screen and (min-width: 961px)"
 
