--- a/source/css/_partial/header.styl
+++ b/source/css/_partial/header.styl
@@ -78,18 +78,35 @@ $logo-text
   font-size: logo-size
   line-height: logo-size
   letter-spacing: 2px
+  @media mq-mobile
+    font-size: logo-size
+    line-height: logo-size
+  @media mq-normal
+    font-size: logo-size * 0.6
+    line-height: logo-size * 0.6
+  @media mq-tablet
+    font-size: logo-size
+    line-height: logo-size
+  @media mq-large
+    font-size: logo-size
+    line-height: logo-size
 
 #subtitle
   @extend $logo-text
-  font-size: subtitle-size
-  line-height: subtitle-size
   letter-spacing: 1px
+
+  @media mq-normal
+    font-size: subtitle-size-normal
+    line-height: subtitle-size-normal
   @media mq-tablet
     font-size: subtitle-size-tablet
     line-height: subtitle-size-tablet
   @media mq-mobile
     font-size: subtitle-size-mobile
     line-height: subtitle-size-mobile
+  @media mq-large
+    font-size: subtitle-size
+    line-height: subtitle-size                            
 
 #subtitle-wrap
   margin-top: subtitle-size
