--- a/source/css/_partial/sidebar-aside.styl
+++ b/source/css/_partial/sidebar-aside.styl
@@ -1,7 +1,9 @@
 #sidebar
   @media mq-normal
     column(sidebar-column)
-
+  @media mq-large
+    column(sidebar-column)
+        
 .widget-wrap
   margin: block-margin 0
 
