--- a/source/css/_partial/mobile.styl
+++ b/source/css/_partial/mobile.styl
@@ -6,7 +6,7 @@
     width: mobile-nav-width
     height: 100%
     background: color-mobile-nav-background
-    border-right: 1px solid #fff
+    border-right: 1px solid #fefefe
 
 @media mq-mobile
   .mobile-nav-link
