--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -4,7 +4,7 @@
   <% } %>
   <div class="outer">
     <div id="footer-info" class="inner">
-     <p class="copyright">© <%= new Date().getFullYear() %> | <a href="http://techlahoma.org/">Techlahoma.org</a> | <a href="/code-of-conduct/">Code of Conduct</a>
+     <p class="copyright">© <%= new Date().getFullYear() %> | <a href="http://techlahoma.org/">Techlahoma.org</a> | <a href="/okcjs-website/code-of-conduct/">Code of Conduct</a>
 	 <p><% if (config.author) { %>
 		<a href="<%= config.url %>" target="_blank" title="<%= config.author %>"><%= config.author %> </a>
 		<% } else {%>
